// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingPage individual fields { title: 'Accessibility, Amenities, Fees', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Accessibility, Amenities, Fees
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Amenities
            </h4>
            <p>
              Laundry room, underground parking, courtyard, bike room
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Deposit Min
            </h4>
            <p>
              $2,102.00
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Deposit Max
            </h4>
            <p>
              $2,355.00
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Costs Not Included
            </h4>
            <p>
              Tenants pay for gas, electricity.

For pet fees:  Cat is allowed with a $500 refundable deposit, $250 non-refundable cleaning fee and a pet addendum.  

Dogs are not allowed in the building.  

One parking space per unit available for $175 a month.
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage individual fields { title: 'Additional Eligibility Rules', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Additional Eligibility Rules
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Building Selection Criteria
            </h4>
            <a
              href="https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2"
              rel="noreferrer"
              target="_blank"
            >
              https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2
            </a>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Eviction History
            </h4>
            <p>
              Provide minimum of 4 years rental history with at least two prior rentals in which you were responsible for paying the rent.  Applicants without rental history will still be considered. No Guarantors permitted. 

Previous rental history will be reviewed and must exhibit no derogatory references. 

Landlord references will only check for evictions, payment history, and documented lease violations. No-fault evictions (Ellis Act, Owner Move-in evictions) will not be held against a household. 

All debt owed to an apartment community must be satisfied. 

Mitigating circumstances may be considered.
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Credit Rating
            </h4>
            <p>
              Provide a credit report with score from Equifax, Experian, or TransUnion dated within thirty (30) days of the application. 

Accounts that are not current or that are derogatory will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Collection accounts exceeding a combined amount of $1,000.00 (excluding student loans and medical debt) will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Bankruptcy if not cleared will be an automatic denial of the rental application. 

No Guarantors permitted.

Mitigating circumstances may be considered.
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage individual fields { title: 'Additional Information', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Additional Information
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Required Documents
            </h4>
            <p>
              Lottery winners will be required to fill out a building application and provide a copy of your current credit report, 3 most recent paystubs, current tax returns and W-2, and 3 most recent bank statements.
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Smoking Policy
            </h4>
            <p>
              Non-smoking building
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Legal Disclaimers
            </h4>
            <p>
              some disclaimer
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Pet Policy
            </h4>
            <p>
              Dogs are not allowed in the building.
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage individual fields { title: 'Application Information', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Application Information
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Application Phone
            </h4>
            <p>
              (415) 227-2256
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Application Organization
            </h4>
            <p>
              280 Fell-BMR
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Application Street Address
            </h4>
            <p>
              P.O. Box 420847
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Application City
            </h4>
            <p>
              San Francisco
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Application State
            </h4>
            <p>
              CA
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Application Postal Code
            </h4>
            <p>
              94142
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage individual fields { title: 'Building Information', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Building Information
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Building Name
            </h4>
            <p>
              77 Bluxome
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Building Street Address
            </h4>
            <p>
              77 Bluxome Street
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Building City
            </h4>
            <p>
              San Francisco
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Building State
            </h4>
            <p>
              CA
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Building Zip Code
            </h4>
            <p>
              94107
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Neighborhood
            </h4>
            <p>
              South of Market
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Developer
            </h4>
            <p>
              Equity Residential
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Building URL
            </h4>
            <a
              href="https://i.imgur.com/Jh8OHJY.jpg"
              rel="noreferrer"
              target="_blank"
            >
              https://i.imgur.com/Jh8OHJY.jpg
            </a>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Year Built
            </h4>
            <p>
              2008
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage individual fields { title: 'Details', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Details
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Owner
            </h4>
            <p>
              Prod Vertiba
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Name
            </h4>
            <p>
              Test 5/30
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Account
            </h4>
            <p>
              Exygy
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Application Due Date
            </h4>
            <p>
              05/31/2018
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Applications in Lottery
            </h4>
            <p>
              2
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Status
            </h4>
            <p>
              Active
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage individual fields { title: 'Leasing Agent and Developer Information', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Leasing Agent and Developer Information
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Leasing Agent Name
            </h4>
            <p>
              Cullen McCaffrey
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Leasing Agent Title
            </h4>
            <p>
              Sales Agent
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Leasing Agent Email
            </h4>
            <p>
              77bluxome@eqr.com
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Leasing Agent Phone
            </h4>
            <p>
              (415) 957-5887
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage individual fields { title: 'Lottery Information', fields: [Array] } fields 1`] = `
<DocumentFragment>
  <div
    class="content-card padding-bottom-none margin-bottom--half bg-trans"
  >
    <h4
      class="content-card_title t-serif"
    >
      Lottery Information
    </h4>
    <ul
      class="content-grid"
    >
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Lottery Date
            </h4>
            <p>
              03/22/2017
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Lottery Results Date
            </h4>
            <p>
              03/23/2017
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Lottery Venue
            </h4>
            <p>
              MOHCD
            </p>
          </div>
        </div>
      </li>
      <li
        class="content-item"
      >
        <div
          class="content-card"
        >
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Lottery Status
            </h4>
            <p>
              Not Yet Run
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Lottery Street Address
            </h4>
            <p>
              1 S. Van Ness Avenue 5th FL
            </p>
          </div>
          <div
            class="margin-bottom--half"
          >
            <h4
              class="t-sans t-small t-bold no-margin"
            >
              Lottery City
            </h4>
            <p>
              San Francisco
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ListingPage should render succesfully 1`] = `
<DocumentFragment>
  <header
    class="lead-header short  bg-snow"
  >
    <div
      class="row full-width inner--3x"
    >
      <div
        class="large-12 columns"
      >
        <hgroup
          class="lead-header_group"
        >
          <h1
            class="lead-header_title small-serif c-oil"
          >
            Test 5/30
          </h1>
        </hgroup>
      </div>
    </div>
  </header>
  <div
    class="tabs-section tabs-row full-width inner--3x bg-snow"
    data-testid="tabs-section"
  >
    <ul
      class="tabs"
      role="menubar"
    >
      <li
        class="tab-title active"
        role="none"
      >
        <a
          aria-selected="true"
          class="button-unstyled"
          href="/listings/a0W0x000000GhJUEA0"
          role="menuitem"
          tabindex="-1"
        >
          Listing Details
        </a>
      </li>
      <li
        class="tab-title"
        role="none"
      >
        <a
          class="button-unstyled"
          href="/listings/a0W0x000000GhJUEA0/applications"
          role="menuitem"
          tabindex="0"
        >
          Applications
        </a>
      </li>
      <li
        class="tab-title"
        role="none"
      >
        <a
          class="button-unstyled"
          href="/listings/a0W0x000000GhJUEA0/lottery-results"
          role="menuitem"
          tabindex="0"
        >
          Lottery Results
        </a>
      </li>
    </ul>
  </div>
  <section
    class="tabs-card-row row full-width inner--3x margin-bottom--2x padding-top--2x bg-white"
  >
    <div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Details
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Owner
                </h4>
                <p>
                  Prod Vertiba
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Name
                </h4>
                <p>
                  Test 5/30
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Account
                </h4>
                <p>
                  Exygy
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Application Due Date
                </h4>
                <p>
                  05/31/2018
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Applications in Lottery
                </h4>
                <p>
                  2
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Status
                </h4>
                <p>
                  Active
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Building Information
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Building Name
                </h4>
                <p>
                  77 Bluxome
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Building Street Address
                </h4>
                <p>
                  77 Bluxome Street
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Building City
                </h4>
                <p>
                  San Francisco
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Building State
                </h4>
                <p>
                  CA
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Building Zip Code
                </h4>
                <p>
                  94107
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Neighborhood
                </h4>
                <p>
                  South of Market
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Developer
                </h4>
                <p>
                  Equity Residential
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Building URL
                </h4>
                <a
                  href="https://i.imgur.com/Jh8OHJY.jpg"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://i.imgur.com/Jh8OHJY.jpg
                </a>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Year Built
                </h4>
                <p>
                  2008
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card"
      >
        <h4
          class="content-card_title t-serif"
        >
          Listing Preferences
        </h4>
        <table>
          <thead>
            <tr>
              <th>
                Name
              </th>
              <th>
                Description
              </th>
              <th>
                PDF URL
              </th>
              <th>
                Order
              </th>
              <th>
                Available Units
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Alice Griffith Housing Development Resident
              </td>
              <td>
                For households in which at least one member was a resident of the Alice Griffith housing development. This includes baseline and current residents that lived in the targeted redevelopment site on or after the time of application for Choice Neighborhoods of October 26, 2010.
              </td>
              <td />
              <td />
              <td>
                1
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Accessibility, Amenities, Fees
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Amenities
                </h4>
                <p>
                  Laundry room, underground parking, courtyard, bike room
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Deposit Min
                </h4>
                <p>
                  $2,102.00
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Deposit Max
                </h4>
                <p>
                  $2,355.00
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Costs Not Included
                </h4>
                <p>
                  Tenants pay for gas, electricity.

For pet fees:  Cat is allowed with a $500 refundable deposit, $250 non-refundable cleaning fee and a pet addendum.  

Dogs are not allowed in the building.  

One parking space per unit available for $175 a month.
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Lottery Information
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Lottery Date
                </h4>
                <p>
                  03/22/2017
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Lottery Results Date
                </h4>
                <p>
                  03/23/2017
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Lottery Venue
                </h4>
                <p>
                  MOHCD
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Lottery Status
                </h4>
                <p>
                  Not Yet Run
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Lottery Street Address
                </h4>
                <p>
                  1 S. Van Ness Avenue 5th FL
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Lottery City
                </h4>
                <p>
                  San Francisco
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Application Information
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Application Phone
                </h4>
                <p>
                  (415) 227-2256
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Application Organization
                </h4>
                <p>
                  280 Fell-BMR
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Application Street Address
                </h4>
                <p>
                  P.O. Box 420847
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Application City
                </h4>
                <p>
                  San Francisco
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Application State
                </h4>
                <p>
                  CA
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Application Postal Code
                </h4>
                <p>
                  94142
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Leasing Agent and Developer Information
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Leasing Agent Name
                </h4>
                <p>
                  Cullen McCaffrey
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Leasing Agent Title
                </h4>
                <p>
                  Sales Agent
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Leasing Agent Email
                </h4>
                <p>
                  77bluxome@eqr.com
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Leasing Agent Phone
                </h4>
                <p>
                  (415) 957-5887
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Additional Eligibility Rules
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Building Selection Criteria
                </h4>
                <a
                  href="https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2"
                  rel="noreferrer"
                  target="_blank"
                >
                  https://us.awp.autotask.net/1/filelink/113bd-37ed41a1-53a7f01459-2
                </a>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Eviction History
                </h4>
                <p>
                  Provide minimum of 4 years rental history with at least two prior rentals in which you were responsible for paying the rent.  Applicants without rental history will still be considered. No Guarantors permitted. 

Previous rental history will be reviewed and must exhibit no derogatory references. 

Landlord references will only check for evictions, payment history, and documented lease violations. No-fault evictions (Ellis Act, Owner Move-in evictions) will not be held against a household. 

All debt owed to an apartment community must be satisfied. 

Mitigating circumstances may be considered.
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Credit Rating
                </h4>
                <p>
                  Provide a credit report with score from Equifax, Experian, or TransUnion dated within thirty (30) days of the application. 

Accounts that are not current or that are derogatory will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Collection accounts exceeding a combined amount of $1,000.00 (excluding student loans and medical debt) will negatively affect the overall scoring, which could result in the denial of the application or an additional deposit may be required. 

Bankruptcy if not cleared will be an automatic denial of the rental application. 

No Guarantors permitted.

Mitigating circumstances may be considered.
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card padding-bottom-none margin-bottom--half bg-trans"
      >
        <h4
          class="content-card_title t-serif"
        >
          Additional Information
        </h4>
        <ul
          class="content-grid"
        >
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Required Documents
                </h4>
                <p>
                  Lottery winners will be required to fill out a building application and provide a copy of your current credit report, 3 most recent paystubs, current tax returns and W-2, and 3 most recent bank statements.
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Smoking Policy
                </h4>
                <p>
                  Non-smoking building
                </p>
              </div>
            </div>
          </li>
          <li
            class="content-item"
          >
            <div
              class="content-card"
            >
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Legal Disclaimers
                </h4>
                <p>
                  some disclaimer
                </p>
              </div>
              <div
                class="margin-bottom--half"
              >
                <h4
                  class="t-sans t-small t-bold no-margin"
                >
                  Pet Policy
                </h4>
                <p>
                  Dogs are not allowed in the building.
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="content-card"
      >
        <h4
          class="content-card_title t-serif"
        >
          Open Houses
        </h4>
        <table>
          <thead>
            <tr>
              <th>
                Date
              </th>
              <th>
                Start Time
              </th>
              <th>
                End Time
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                02/23/2018
              </td>
              <td>
                9:00AM
              </td>
              <td>
                12:00PM
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
